--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,208 +1,12 @@
-.body{
-  background: rgb(225, 255, 225);
-  font-family:"Noto Sans";
-}
-.InfoBox{
-  position: absolute;
-  top: 50px;
-  right: 10px;
-}
-.InfoBoxInfo{
-  position: absolute;
-  left: 10px;
-  top: 25px;
-  font-size: 14px;
-}
-.InfoBoxBox{
-  border: 2px solid rgb(150, 150, 150);
-  border-radius: 15px;
-  width: 250px;
-  height: 100px;
-}
-.InfoBoxTitle{
-  font-size: 15px;
-}
-.title{
+.Body{
+  background: rgb(0, 0, 0);
   font-family: "Noto Sans";
-  font-size: 25px;
-  border: 3px solid rgb(150, 150, 150);
-  border-radius: 100px;
-  align-self: center;
-  #width: 200px;
-  text-align: center;
-  color: rgb(0, 25, 50);
 }
-.ManufactureMint{
-  width: 100px;
-}
-.ManufactureMintButton{
-  text-align: center;
-  align-self: center;
-  background-color: rgb(150, 150, 150);
-  border: 5px rgb(200, 200, 200);
-  border-radius: 5px;
-  color: white;
-}
-.SellMints{
-  width: 100px;
-}
-.SellMintsButton{
-  background-color: rgb(150, 150, 150);
-  border: 5px rgb(200, 200, 200);
-  border-radius: 5px;
-  color: white;
-  text-align: center;
-  align-self: center;
-}
-.Save{
-}
-.SaveButton{
-  background-color: rgb(150, 150, 150);
-  border: 5px rgb(200, 200, 200);
-  border-radius: 5px;
-  color:white;
-  text-align: center;
-  align-self: center;
+
+.Title{
   position: absolute;
-  right: 25px;
-  top: 20px;
-  #position: relative;
-  #left: 1210px;
-  #bottom: 146px;
-}
-.ImportSave{
-}
-.ImportSaveButton{
-  background-color: rgb(150, 150, 150);
-  border: 5px rgb(200, 200, 200);
-  border-radius: 5px;
-  color:white;
-  text-align: center;
-  align-self: left;
-  position: absolute;
-  top: 20px;
-  left: 25px;
-  #position: relative;
-  #left: 10px;
-  #bottom: 164px;
-}
-.Manufacturing{
-  position: absolute;
-  top: 50px;
-  left: 200px;
-  #position: relative;
-  #left: 200px;
-  #bottom: 155px;
-}
-.ManufacturingTitle{
   font-size: 20px;
-}
-.MandatoryVolunteer{
-  color: white;
-  background-color: rgb(150, 150, 150);
-  border: 5px rgb(200, 200, 200);
-  border-radius: 5px;
-  color:white;
-  text-align: center;
-  align-self: center;
-  width: 139px;
-}
-.PermanentIndenturedServant{
-  color: white;
-  background-color: rgb(150, 150, 150);
-  border: 5px rgb(200, 200, 200);
-  border-radius: 5px;
-  color:white;
-  text-align: center;
-  align-self: center;
-  width: 139px;
-}
-.MintMolder{
-  color: white;
-  background-color: rgb(150, 150, 150);
-  border: 5px rgb(200, 200, 200);
-  border-radius: 5px;
-  color:white;
-  text-align: center;
-  align-self: center;
-  width: 139px;
-}
-.MintFabricator{
-  color: white;
-  background-color: rgb(150, 150, 150);
-  border: 5px rgb(200, 200, 200);
-  border-radius: 5px;
-  color:white;
-  text-align: center;
-  align-self: center;
-  width: 139px;
-}
-.MintSuperComputer{
-  color: white;
-  background-color: rgb(150, 150, 150);
-  border: 5px rgb(200, 200, 200);
-  border-radius: 5px;
-  color:white;
-  text-align: center;
-  align-self: center;
-  width: 139px;
-}
-.QuantumMint{
-  color: white;
-  background-color: rgb(150, 150, 150);
-  border: 5px rgb(200, 200, 200);
-  border-radius: 5px;
-  color:white;
-  text-align: center;
-  align-self: center;
-  width: 139px;
-}
-.ManufacturingDesc{
-  font-size: 13px;
-}
-.ResearchTitle{
-  font-size: 20px;
-}
-.Research{
-  position: absolute;
-  top: 50px;
-  left: 450px;
-}
-.ResearchDescription{
-  font-size: 13px
-}
-.EfficientManufacturingResearchButton{
-  width: 150px;
-  border: 5px rgb(150, 150, 150);
-  border-radius: 5px;
-  color: white;
-  background: rgb(150, 150, 150)
-}
-.AdvertiseMintsButton{
-  width: 150px;
-  border: 5px rgb(150, 150, 150);
-  border-radius: 5px;
-  color: white;
-  background: rgb(150, 150, 150)
-}
-.BetterVolunteersButton{
-  width: 150px;
-  border: 5px rgb(150, 150, 150);
-  border-radius: 5px;
-  color: white;
-  background: rgb(150, 150, 150)
-}
-.MorePermanentServantsButton{
-  width: 150px;
-  border: 5px rgb(150, 150, 150);
-  border-radius: 5px;
-  color: white;
-  background: rgb(150, 150, 150)
-}
-.BetterMoldsButton{
-  width: 150px;
-  border: 5px rgb(150, 150, 150);
-  border-radius: 5px;
-  color: white;
-  background: rgb(150, 150, 150)
+  left: 50%;
+  top: 3%;
+  color: rgb(255, 255, 255);
 }
