--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,3 +10,32 @@
   top: 3%;
   color: rgb(255, 255, 255);
 }
+
+.InfoArea{
+}
+
+.Info{
+  position: absolute;
+  color: rgb(255, 255, 255);
+  font-size: 13px;
+  left: 2%;
+  top: 5%;
+}
+
+.DuplicateDiv{
+  
+}
+
+.DuplicateButton{
+  color: rgb(255, 255, 255);
+  background: rgb(0, 0, 0);
+  border: 3px solid rgb(25, 25, 25);
+  border-radius: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  position: absolute;
+  left: 1.7%;
+  top: 22%;
+}
