--- a/stylesheet.css
+++ b/stylesheet.css
@@ -232,3 +232,65 @@
   top: 12%;
   width: 350px;
 }
+
+.ReplicatorDiv{
+  
+}
+
+.ReplicatorButton{
+  color: rgb(255, 255, 255);
+  background: rgb(0, 0, 0);
+  border: 3px solid rgb(25, 25, 25);
+  border-radius: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  position: absolute;
+  top: 8%;
+  left: 40%;
+}
+
+.ReplicatorButton:hover{
+  
+}
+
+.ReplicatorButton[aria-label]:hover:after{
+  content: attr(aria-label);
+  padding: 0px 0px;
+  position: absolute;
+  left: 105%;
+  top: 12%;
+  width: 350px;
+}
+
+.GeneratorDiv{
+  
+}
+
+.GeneratorButton{
+  color: rgb(255, 255, 255);
+  background: rgb(0, 0, 0);
+  border: 3px solid rgb(25, 25, 25);
+  border-radius: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  position: absolute;
+  top: 13%;
+  left: 40%;
+}
+
+.GeneratorButton:hover{
+  
+}
+
+.GeneratorButton[aria-label]:hover:after{
+  content: attr(aria-label);
+  padding: 0px 0px;
+  position: absolute;
+  left: 95%;
+  top: 12%;
+  width: 450px;
+}
